# rubiks

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_main.cpp  app.cpp  app.h  log.h  main.cpp  renderer.cpp  renderer.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
